<resources>
    <string name="app_name">Android SIU</string>
    <string name="enter_text_to_send_to_other_activity">Enter text to send to the other activity</string>
    <string name="activity_1">Activity 1</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="activity_2">Activity 2</string>
    <string name="here_is_your_message">Here is your message!</string>
    <string name="close">Close</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="special_item">Special item</string>
    <string name="rate">Rate</string>
</resources>